# OpenManus-RL

./: .env.example  .gitignore  ANDROID_BUILD_GUIDE.md  FINAL_PROJECT_SUMMARY.md  PROJECT_FILES_LIST.md  PROJECT_SUMMARY.md  README.md  README_YOUSEF_SH.md  Readme.md  build-android.sh  config.xml  github-mobile-app.html  package-lock.json  package.json  pyproject.toml  requirements.txt  server.js  train_grpo.sh  train_grpo_sbatch.sh  train_ppo.sh  train_ppo_sbatch.sh
__MACOSX/: ._webshop_tot
__MACOSX/webshop_tot/: ._llm_agent_tot.py  ._run_agent_tot.py  ._util.py
__MACOSX/webshop_tot/web_agent_site/: ._app.py  ._utils.py
agentgym/2nd_dev_docs/: AgentGym项目结构文档.md  todo_list.md
agentgym/agentenv_gaia/: pyproject.toml
agentgym/agentenv_gaia/agentenv_gaia/: server.py
agentgym/agentenv_gaia/agentenv_gaia/utils/: openmanus_imports.py
data/: generate_sft_verl.py  generate_train_agentgym_all.py  generate_train_webshop.py
data/babyai/: test.parquet  train.parquet  val.parquet
data/maze/: test.parquet  train.parquet  val.parquet
data/movie/: test.parquet  train.parquet  val.parquet
data/sciworld/: test.parquet  train.parquet  val.parquet
data/sqlgym/: test.parquet  train.parquet  val.parquet
data/textcraft/: test.parquet  train.parquet  val.parquet
data/todo/: test.parquet  train.parquet  val.parquet
data/weather/: test.parquet  train.parquet  val.parquet
data/webshop/: test.parquet  val.parquet  validation.parquet  webshop.py
data/webshop_old/: train.parquet
data/wordle/: test.parquet  train.parquet  val.parquet
docs/: DEVELOPMENT_GUIDE_EN.md  DEVELOPMENT_GUIDE_ZH.md  EVALUATION_GUIDE_EN.md  README.md  README_ZH.md  SFT_GUIDE_EN.md
mobile/: index.html
openmanus-rl/: grpo.py  rewards.py  sft.py  utils.py
openmanus_rl/: grpo.py  sft.py  utils.py
openmanus_rl/agentbench/: .gitignore  run_vllm.sh
openmanus_rl/agentbench/configs/: start_task.yaml
openmanus_rl/agentgym/agentenv-gaia/: README.md  pyproject.toml  test_gaia_react.py
openmanus_rl/agentgym/agentenv-gaia/agentenv_gaia/: __init__.py  enviroment.py  environment.py  launch.py  model.py  server.py  tool_manager.py
openmanus_rl/agentgym/agentenv-gaia/agentenv_gaia/utils/: load_data.py
openmanus_rl/agentgym/agentenv-gaia/config/: config.example.toml
openmanus_rl/agentgym/agentenv-gaia/gaia/: terminate.py  tool_collection.py
openmanus_rl/agentgym/agentenv-gaia/gaia/search/: bing_search.py  duckduckgo_search.py
openmanus_rl/agentgym/agentenv-gaia/tests/: README.md  bash_traj.json  browser_use_traj.json  run_tests.py  test_server.py  test_trajectories.py  web_search_traj.json
openmanus_rl/evaluation/: run_vllm.sh  vllm_eval_webshop.py
openmanus_rl/llm_agent/: openmanus.py  tool_manager.py
openmanus_rl/utils/: __init__.py  visualization.py
public/: index.html  offline.html  script.js  styles.css  sw.js
scripts/: offline_rollout.sh  optimize-for-mobile.js  run_sft.sh  train_ppo_qwen2.5_3B.sh  train_ppo_qwen2.5_3B_instruct.sh  train_ppo_qwen3-8B.sh  train_sft.sh
src/models/: AIModel.js
src/services/: ChatService.js
test/: test_openmanus.py
traj_generation/: .env_example  rollout_eval.py
traj_generation/configs/: start_task.yaml
verl/: protocol_old.py  setup.py
verl/trainer/: fsdp_sft_trainer.py  main_ppo.py
verl/workers/: fsdp_workers.py
wandb/: latest-run
wandb/run-20250427_034358-dtcb0ywm/: run-dtcb0ywm.wandb
(+101 files in other folders)
