[project]
name = "agentenv_gaia"
version = "0.1.0"
description = ""
authors = [
    {name = "rxdaozhang",email = "896836861@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "agentenv_gaia", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
