[project]
name = "agentenv_gaia"
version = "0.1.0"
description = "GAIA Environment Server for OpenManus-RL"
authors = [
    {name = "rxdaozhang",email = "896836861@qq.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.22.0",
    "pydantic>=1.10.7",
    "requests>=2.28.0",
    "datasets>=2.10.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
    "tenacity>=8.2.0",
    "multiprocessing-logging>=0.3.1",
    "baidusearch>=0.1.0",
    "googlesearch-python>=1.0.0",
    "duckduckgo-search>=3.0.0",
    "browser-use~=0.1.40",
    "loguru>=0.6.0",
]

[project.scripts]
gaia-server = "agentenv_gaia.launch:main"

[tool.poetry]
packages = [{include = "agentenv_gaia"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
